
2007-11-26 Mateusz Loskot <mateusz@loskot.net>

	* source\Makefile.vc: enabled target copying version.h.vc
	  and geos_c.h.vc to headers used by Visual C++ 
	  source\headers\geos\version.h.vc: added test if used
	  with Visual C++ compiler

2007-11-22 Mateusz Loskot <mateusz@loskot.net>

	* source/headers/geos/io/WKBWriter.h: added purifying cast of 
	  int value to bool.

2007-06-11 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/operation/IsSimpleOpTest.cpp,
	  tests/unit/Makefile.am: Added test for IsSimpleOp class.
	* source/operation/IsSimpleOp.cpp: Replaced post-increment
	  operators with pre-increment operators where standard
	  iterators are incremented in loops. NOTE: Prefer pre-incr.
	  over post-inc. when working with standard iterators.

2007-06-10 Mateusz Loskot <mateusz@loskot.net>

	* tests/unit/utility.h: Added custom operators for static and
	  dynamic casts of pointers wrapped with std::auto_ptr<T> type.
	* tests/unit/algorithm/ConvexHullTest.cpp: Added unit test for
	  geos::algorithm::ConvexHull.
	* tests/unit/algorithm/CGAlgorithms/isCCWTest.cpp: Added unit test for
	  geos::algorithm::CGAlgorithms::isCCW() function.
	* tests/unit/algorithm/CGAlgorithms/computeOrientationTest.cpp: Added unit
	  test for geos::algorithm::CGAlgorithms::computeOrientation() function.
	* tests/unit/Makefile.am: Added files with new tests.

2007-06-08 Mateusz Loskot <mateusz@loskot.net>

	* capi/geos_c.h.in: Applied Konstantin Baumann's suggestion
	  about including version.h in C API header for Visual C++.
	* build/msvc80/geos_lib/geos_lib.vcproj: Updated project file.
	* source/algorithm/InteriorPointArea.cpp,
	  source/algorithm/SIRtreePointInRing.cpp,
	  source/algorithm/HCoordinate.cpp,
	  source/algorithm/CentroidArea.cpp,
	  source/algorithm/PointLocator.cpp,
	  source/algorithm/InteriorPointLine.cpp,
	  source/algorithm/CentroidLine.cpp,
	  source/algorithm/InteriorPointPoint.cpp,
	  source/algorithm/CentroidPoint.cpp,